# fusion

./: .gitignore  .gitmodules  Cargo.toml  README.md  fusion.toml  trollup.toml
.github/workflows/: rust.yml
circuits/: .gitignore  Makefile  babyjubjub_signature.zok  fusion.zok  merkle_tree.zok  trollup.zok  types.zok
fusion-api/: Cargo.toml
fusion-api/src/: lib.rs
fusion-config/: Cargo.toml
fusion-config/src/: lib.rs
fusion-powdr-verifier/: Cargo.toml
fusion-powdr-verifier/src/: lib.rs
fusion-prover/: Cargo.toml
fusion-prover/src/: lib.rs  poseidon_hasher.rs  state.rs
fusion-sequencer/: Cargo.toml  README.md
fusion-sequencer/src/: lib.rs  main.rs  node.rs  sequencer.rs  server.rs
fusion-state/: Cargo.toml
fusion-state/src/: lib.rs  merkle_tree.rs  poseidon_gl.rs  poseidon_hasher.rs  state.rs
fusion-types/: Cargo.toml
fusion-types/src/: lib.rs
fusion-wallet/: Cargo.toml
fusion-wallet/src/: lib.rs  main.rs
l1-verifier/: Makefile  README.md  foundry.toml
l1-verifier/script/: Fusion.s.sol  Trollup.s.sol  Verifier.s.sol
l1-verifier/src/: Fusion.sol  Trollup.sol  Verifier.sol
l1-verifier/test/: Fusion.t.sol  Trollup.t.sol  Verifier.t.sol
l1_verifier/: README.md
l1_verifier/script/: Verifier.s.sol
l1_verifier/src/: Verifier.sol
l1_verifier/test/: Verifier.t.sol
l2_bindings/: Cargo.toml
l2_bindings/src/: l2.rs  lib.rs
poseidon/: Cargo.toml
poseidon/src/: constants.rs  lib.rs
scripts/: kill_anvil  kill_node  listen_to_node  run_anvil_and_deploy_contract  run_node  send_random_tx
sequencer/: Cargo.toml  README.md
sequencer/l1-verifier-bindings/: Cargo.toml
sequencer/l1-verifier-bindings/src/: lib.rs  verifier.rs  verifier_script.rs  verifier_test.rs
sequencer/l2_bindings/src/: l2_script.rs  l2_test.rs
sequencer/src/: api.rs  conversions.rs  lib.rs  main.rs  merkle_tree.rs  poseidon_hasher.rs  prover.rs  state.rs
sign/: Cargo.toml
sign/src/: main.rs
src/: main.rs  node.rs
trollup-api/: Cargo.toml
trollup-api/src/: lib.rs
trollup-config/: Cargo.toml
trollup-config/src/: lib.rs
trollup-prover/: Cargo.toml
trollup-prover/src/: lib.rs  merkle_tree.rs  poseidon_hasher.rs  state.rs
trollup-sequencer/: Cargo.toml
trollup-sequencer/src/: lib.rs  main.rs  poseidon_hasher.rs  prover.rs  sequencer.rs  server.rs  state.rs
trollup-signature/: Cargo.toml
trollup-signature/src/: lib.rs
trollup-signer/: Cargo.toml
trollup-signer/src/: main.rs
trollup-types/: Cargo.toml
trollup-types/src/: lib.rs
trollup-wallet/: Cargo.toml
trollup-wallet/src/: lib.rs  main.rs
