[package]
name = "fusion-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ruint = { version = "1.10.1", default-features = false }
#ethers-core = { version = "2" }
#poseidon-rs = "0.0.8"
#serde = "1.0.152"
#tarpc = { version = "0.31", features = ["full"] }
fusion-types = { path = "../fusion-types" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
