[package]
name = "fusion-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babyjubjub-rs = { git = "https://github.com/leonardoalt/babyjubjub-rs" }
bitmaps = "3.2.0"
ethers-core = { version = "2" }
poseidon-rs = "0.0.8"
serde = "1.0.152"
serde_json = "1.0.61"
serde_tuple = "0.5.0"
rand_0_8 = { version = "0.8", package = "rand" }
zokrates_abi = { git = "https://github.com/ZoKrates/ZoKrates", tag = "0.8.7" }
zokrates_ark = { git = "https://github.com/ZoKrates/ZoKrates", tag = "0.8.7" }
zokrates_ast = { git = "https://github.com/ZoKrates/ZoKrates", tag = "0.8.7" }
zokrates_field = { git = "https://github.com/ZoKrates/ZoKrates", tag = "0.8.7" }
zokrates_interpreter = { git = "https://github.com/ZoKrates/ZoKrates", tag = "0.8.7" }
zokrates_proof_systems = { git = "https://github.com/ZoKrates/ZoKrates", tag = "0.8.7" }
fusion-l1 = { path = "../l1-verifier/out/bindings" }
fusion-api = { path = "../fusion-api" }
fusion-config = { path = "../fusion-config" }
fusion-wallet = { path = "../fusion-wallet" }
fusion-types = { path = "../fusion-types" }
