[package]
name = "fusion-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babyjubjub-rs = { git = "https://github.com/leonardoalt/babyjubjub-rs" }
bitmaps = "3.2.0"
ethers-core = { version = "2" }
#poseidon-rs = "0.0.8"
poseidon-rs = { git = "https://github.com/leonardoalt/poseidon-rs", branch = "pallas" }
serde = "1.0.152"
serde_json = "1.0.61"
serde_tuple = "0.5.0"
rand_0_8 = { version = "0.8", package = "rand" }
zokrates_abi = { git = "https://github.com/ZoKrates/ZoKrates", branch = "develop" }
zokrates_ark = { git = "https://github.com/ZoKrates/ZoKrates", branch = "develop" }
zokrates_ast = { git = "https://github.com/ZoKrates/ZoKrates", branch = "develop" }
zokrates_bellperson = { git = "https://github.com/ZoKrates/ZoKrates", branch = "develop" }
zokrates_field = { git = "https://github.com/ZoKrates/ZoKrates", branch = "develop" }
zokrates_interpreter = { git = "https://github.com/ZoKrates/ZoKrates", branch = "develop" }
zokrates_proof_systems = { git = "https://github.com/ZoKrates/ZoKrates", branch = "develop" }
fusion-l1 = { path = "../l1-verifier/out/bindings" }
fusion-api = { path = "../fusion-api" }
fusion-config = { path = "../fusion-config" }
fusion-wallet = { path = "../fusion-wallet" }
fusion-types = { path = "../fusion-types" }
serde_cbor = "0.11.2"
