[package]
name = "fusion-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babyjubjub-rs = { git = "https://github.com/leonardoalt/babyjubjub-rs" }
ethers-core = { version = "2" }
ff = { package="ff_ce" , version= "0.11", features = ["derive"] }
num-bigint = "0.4.3"
#poseidon-rs = "0.0.8"
poseidon-rs = { git = "https://github.com/leonardoalt/poseidon-rs", branch = "pallas" }
serde = "1.0.152"
