[package]
name = "fusion-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruint = { version = "1.10.1", default-features = false, features = ["serde"] }
#ark-ff = { version = "0.4.2", default-features = false }
#serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
