[package]
name = "troller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["macros"] }
