[package]
name = "trollup-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
poseidon = { git = "https://github.com/leonardoalt/Poseidon_BN128", branch = "main" }
serde = "1.0.152"
tarpc = { version = "0.31", features = ["full"] }
trollup-types = { path = "../trollup-types" }
