[package]
name = "trollup-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
serde = "1.0.152"
serde_json = "1.0.91"
toml = "0.7.0"
