[package]
name = "trollup-sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
futures = "0.3.25"
hyper = "0.14.23"
jsonrpsee = { version = "0.16.0", features = ["server"] }
log = "0.4.17"
tokio = "1.21.2"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors"] }
trollup-l1 = { path = "../l1-verifier/out/bindings" }
trollup-api = { path = "../trollup-api" }
trollup-prover = { path = "../trollup-prover" }
trollup-signature = { path = "../trollup-signature" }
trollup-types = { path = "../trollup-types" }
