[package]
name = "trollup-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babyjubjub-rs = "0.0.10"
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
num-bigint = "0.4.3"
zokrates_field = { git = "https://github.com/ZoKrates/ZoKrates", tag = "0.8.3" }
