[package]
name = "trollup-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
babyjubjub-rs = { git = "https://github.com/leonardoalt/babyjubjub-rs" }
clap = { version = "4.0.22", features = ["derive"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
num-bigint = "0.4.3"
tokio = { version = "1.24.2", features = ["macros"] }
trollup-api = { path = "../trollup-api" }
trollup-signature = { path = "../trollup-signature" }
trollup-types = { path = "../trollup-types" }
