[package]
name = "trollup-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
babyjubjub-rs = { git = "https://github.com/leonardoalt/babyjubjub-rs" }
clap = { version = "4.1.4", features = ["derive"] }
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
num-bigint = "0.4.3"
tarpc = { version = "0.31", features = ["full"] }
tokio = { version = "1.25.0", features = ["full"] }
trollup-api = { path = "../trollup-api" }
trollup-types = { path = "../trollup-types" }
